--- a/style.css
+++ b/style.css
@@ -201,14 +201,14 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 1rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to bottom,
-            rgba(0, 0, 0, 0.7) 100%,
-            rgba(0, 0, 0, 0.5) 100%,
-            rgba(0, 0, 0, 0) 100%);
+            rgba(0, 0, 0) 100%,
+            rgba(0, 0, 0,) 100%,
+            rgba(0, 0, 0) 100%);
     pointer-events: none;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
