--- a/style.css
+++ b/style.css
@@ -205,10 +205,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(to bottom,
-            rgba(0, 0, 0) 100%,
-            rgba(0, 0, 0,) 100%,
-            rgba(0, 0, 0) 100%);
+    background-color:#2a2a2a;   
     pointer-events: none;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
