--- a/style.css
+++ b/style.css
@@ -201,11 +201,11 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    padding: 2rem;
+    padding: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:#2a2a2a;   
+    background-color:#1a1923;   
     pointer-events: none;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
