--- a/style.css
+++ b/style.css
@@ -133,6 +133,16 @@ body {
     color: transparent;
 }
 
+.clickable-area {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    z-index: 5;
+}
+
 .section-subtitle {
     font-size: 1.25rem;
     font-weight: 700;
