--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ body {
 
 .app-content {
     flex-grow: 1;
-    overflow-y: auto;
-    padding: 1rem 1rem 6rem 1rem;
     scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
 }
 
 .app-content::-webkit-scrollbar {
@@ -55,10 +55,14 @@ body {
 .page {
     display: none;
     animation: fadeIn 0.3s ease-out;
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 1rem 1rem 6rem 1rem;
 }
 
 .page.active {
-    display: block;
+    display: flex;
+    flex-direction: column;
 }
 
 @keyframes fadeIn {
@@ -167,10 +171,8 @@ body {
 }
 
 #main.page.active {
-    margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
+    overflow: hidden;
 }
 
 .main-header,
