--- a/style.css
+++ b/style.css
@@ -43,9 +43,8 @@ body {
 
 .app-content {
     flex-grow: 1;
-    scroll-behavior: smooth;
+    position: relative;
     display: flex;
-    flex-direction: column;
 }
 
 .app-content::-webkit-scrollbar {
@@ -55,14 +54,20 @@ body {
 .page {
     display: none;
     animation: fadeIn 0.3s ease-out;
-    flex-grow: 1;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     overflow-y: auto;
     padding: 1rem 1rem 6rem 1rem;
 }
 
 .page.active {
     display: flex;
-    flex-direction: column;
+}
+
+#main.page.active {
+    overflow: hidden;
+    padding: 0;
 }
 
 @keyframes fadeIn {
@@ -170,10 +175,6 @@ body {
     border-radius: 3px;
 }
 
-#main.page.active {
-    padding: 0;
-    overflow: hidden;
-}
 
 .main-header,
 .total-coins-container,
