--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ body {
     width: 100vw;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #app {
@@ -39,6 +42,12 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    max-width: 480px;
+    min-width: 360px;
+    min-height: 600px;
+    position: relative;
+    border-radius: 1rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .app-content {
